--- a/DvachBrowser3/Views/BoardPage.xaml
+++ b/DvachBrowser3/Views/BoardPage.xaml
@@ -19,6 +19,7 @@
             <ps:ShellAppBarPageService />
             <ps:ViewModelLifetimePageService />
             <ps:StoreNavigationDataPageService MinutesToStore="60" Version="1.0.0"/>
+            <ps:GcInvokePageService />
         </ps:PageServiceCollection>
     </ps:PageServices.Services>
 
