--- a/DvachBrowser3/Views/BoardsPage.xaml
+++ b/DvachBrowser3/Views/BoardsPage.xaml
@@ -21,6 +21,7 @@
         <ps:PageServiceCollection>
             <ps:ShellAppBarPageService />
             <ps:ViewModelLifetimePageService />
+            <ps:GcInvokePageService />
         </ps:PageServiceCollection>
     </ps:PageServices.Services>
     
