--- a/DvachBrowser3/Views/Partial/PostingEntryView.xaml
+++ b/DvachBrowser3/Views/Partial/PostingEntryView.xaml
@@ -133,12 +133,14 @@
                                      Text="{x:Bind ViewModel.Fields.ThreadTag.Value, Mode=OneWay}" 
                                      Tag="{x:Bind ViewModel.Fields.ThreadTag, Mode=OneWay}" TextChanged="TextBox_OnTextChanged"
                                      />
-                            <TextBox Header="Комментарий" AcceptsReturn="True" TextWrapping="Wrap" MinHeight="200" MaxHeight="480"
+                            <TextBox Header="Комментарий" AcceptsReturn="True" TextWrapping="Wrap" Height="320"
                                      Visibility="{x:Bind ViewModel.Fields.Comment.IsSupported, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}"
                                      Text="{x:Bind ViewModel.Fields.Comment.Value, Mode=OneWay}"
                                      Tag="{x:Bind ViewModel.Fields.Comment, Mode=OneWay}" TextChanged="TextBox_OnTextChanged"
-                                     x:Name="CommentBox2"/>
+                                     x:Name="CommentBox2" GotFocus="CommentBox2_OnGotFocus" LostFocus="CommentBox2_OnLostFocus"/>
+                            <!--
                             <local:MarkupControl MarkupProvider="{x:Bind ViewModel.Fields.MarkupProvider, Mode=OneWay}" Orientation="Horizontal" HorizontalAlignment="Left" ApplyMarkup="MarkupControl2_OnApplyMarkup" />
+                            -->
                         </StackPanel>
                     </ScrollViewer>
                 </PivotItem>
